Add show gifs in Detail Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">TestDeveloperProject</string>
+    <string name="app_name">TestDeveloperProject</string>#
+
+    <string name="home_fragment_enter_name_gif">Enter name</string>
 </resources>
